增加LeanCloud文章点击数统计

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,11 +24,20 @@ layout: blog
                                     <!--<span itemprop="name">{% if page.author == null %}{{ site.author.name }}{% else %}{{ page.author }}{% endif %}</span>-->
                                 <!--</span>-->
                             <!--</a>-->
-                            {% if site.blog.cc_license and site.blog.cc_license_image %}
-                                <a class="license-icon" rel="license" href="{{ site.blog.cc_license }}" target="_blank" title="{{ site.data.i18n[site.lang].show_license }}">
-                                    <img alt="Creative Commons Licence" style="border-width:0" src="{{ site.blog.cc_license_image | relative_url }}"  height="16" width="80"/>
-                                </a>
+                            {% if site.lean_cloud.enable %}
+                            <span id="{{ page.url }}" class="leancloud_visitors meta_data_item" data-flag-title="{{ page.title }}">
+                            <span class="post-meta-item-icon">
+                            <span class="octicon octicon-eye"></span>
+                            </span>
+                            | Hits: <span class="old-visitors-count" style="display: none;">0</span>
+                            <span class="leancloud-visitors-count"></span>
+                            </span>
                             {% endif %}
+                            <!--{% if site.blog.cc_license and site.blog.cc_license_image %}-->
+                                <!--<a class="license-icon" rel="license" href="{{ site.blog.cc_license }}" target="_blank" title="{{ site.data.i18n[site.lang].show_license }}">-->
+                                    <!--<img alt="Creative Commons Licence" style="border-width:0" src="{{ site.blog.cc_license_image | relative_url }}"  height="16" width="80"/>-->
+                                <!--</a>-->
+                            <!--{% endif %}-->
                             {% if page.last_updated %}
                                 ({{ site.data.i18n[site.lang].last_updated}}:
                                 <time class="date-updated updated" title="{{ page.last_updated | date_to_xmlschema }}" datetime="{{ page.last_updated | date_to_xmlschema }}">{{ page.last_updated }}</time>)
@@ -78,4 +87,3 @@ layout: blog
         </div>
     </div>
 </article>
-{% include baidu_statistics.html %}
