--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -38,9 +38,9 @@
         </div>
         {% include blog/footer.html %}
     </div>
-
     {% include blog/scripts.html %}
     {% include baidu_statistics.html %}
+    {% include leancloud_statistics.html %}
 </body>
 
 </html>
