--- a/_includes/leancloud_statistics.html
+++ b/_includes/leancloud_statistics.html
@@ -1,5 +1,5 @@
 {% if site.lean_cloud.enable %}
-<script src="https://cdn1.lncld.net/static/js/av-core-mini-0.6.1.js"></script>
+<script src="{{ site.baseurl }}/assets/javascripts/av-core-mini-0.6.1.js"></script>
 
 <script type="text/javascript">
     AV.initialize("{{site.lean_cloud.app_id}}", "{{site.lean_cloud.app_key}}");
